--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,11 +9,13 @@
       <div class="dropdown">
         <i class="fas fa-bars dropdown-toggle" aria-hidden="true" id="dropdown-icon", data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
-          <li>
-            <%= link_to user_path(current_user) do %>
-              <i class="fas fa-user-circle"></i> <%= t(".profile", default: "Mon compte") %>
-            <% end %>
-          </li>
+          <% if user_signed_in? %>
+            <li>
+              <%= link_to user_path(current_user) do %>
+                <i class="fas fa-user-circle"></i> <%= t(".profile", default: "Mon compte") %>
+              <% end %>
+            </li>
+          <% end %>
           <li>
             <%= link_to faq_path do %>
               <i class="fas fa-question-circle"></i> <%= t(".faq", default: "FAQ") %>
